rnsc/test_data/rns_integration/error/parser/mangled_name_directive/multiple_definitions.rns
; Tests that multiple .mangled_name directives are detected and reported.
; Expected error: E-035 (multiple mangled names)

.class public MyClass
.super java/lang/Object

.inner Inner
    .super java/lang/Object
    .mangled_name FirstName
    .mangled_name SecondName
.inner_end

.class_end
